<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="modelItem"
            type="String"/>
        <variable
            name="viewModel"
            type="com.evodream.app.accountcommons.login.LoginViewModel" />

        <variable
            name="handler"
            type="com.evodream.app.accountcommons.login.LoginHandler" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFacebook">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebook"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="start|center"
                    android:contentDescription="@string/lit_login_with_facebook"/>
                <TextView
                    style="@style/MyButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lit_login_with_facebook"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{()->handler.handleFacebookTap()}"
                    android:focusable="true"
                    android:clickable="true"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/google__button_gradient"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="start|center"
                    android:contentDescription="@string/lit_login_with_google"/>
                <TextView
                    style="@style/MyButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lit_login_with_google"
                    android:layout_gravity="center"
                    android:onClick="@{()->handler.handleGoogleTap()}"
                    android:background="?attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true"
                    android:textColor="@color/colorPrimaryText"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.45"
                    android:background="@color/colorDivider"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/lit_or"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.45"
                    android:background="@color/colorDivider"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lit_email"
                    android:text="@={viewModel.email}"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lit_password"
                    android:text="@={viewModel.password}"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp">
                <TextView
                    style="@style/MyButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lit_login"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackground"
                    android:focusable="true"
                    android:onClick="@{() -> handler.handleLoginTap()}"
                    android:clickable="true"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lit_title_not_have_account"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lit_register_here"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:onClick="@{() -> handler.handleRegisterTap()}"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="@{() -> handler.handleForgetPasswordTap()}"
                android:text="@string/lit_forget_password"/>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>