<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lit_title_forget_password"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lit_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp">
                <TextView
                    style="@style/MyButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lit_forget_password_button"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true"/>
            </FrameLayout>

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>